gcc/testsuite/gdc.test/compilable/test15402.d
// REQUIRED_ARGS: -de

struct S
{
    package int field;
}

void test()
{
    S s;
    s.field = 1;
}
